fixing logo size on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -259,8 +259,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .logoHeader {
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 90%;
+    max-width: 90%;
 }
 
 .fill {
@@ -338,6 +338,11 @@ body {
 
     .clientLogo {
         padding: 20px;
+    }
+
+    .logoHeader {
+        max-height: 100%;
+        max-width: 100%;
     }
 }
 
